Changed homepage fonts to Glacial Indifference

--- a/Winners Circuit/wc/src/pages/homepage.css
+++ b/Winners Circuit/wc/src/pages/homepage.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@1,300&display=swap');
+@import url('https://fontlibrary.org//face/glacial-indifference');
 
 body {
   background-color: #f6f6f6;
@@ -19,7 +19,7 @@ body {
 }
 
 .left p {
-  font-family: 'Chivo', sans-serif;
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
   font-size: 95px;
   margin-bottom: 70px;
   margin-top: -50px;
@@ -39,19 +39,19 @@ body {
   margin-left: -25px;
   padding: 15px;
   border: 8px solid #9f0101;
-  font-family: 'Chivo', sans-serif;
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
   font-weight: lighter;
   font-size: 40px;
   width: 800px;
 }
 
 .bold {
-  font-family: 'Chivo', sans-serif;
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
   font-weight: bold;
 }
 
 #joinButton {
-  font-family: 'Chivo', sans-serif;
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
   font-size: 20px;
   font-weight: bold;
   color: #111111;
@@ -64,7 +64,7 @@ body {
 
 #signInButton {
   background-color: white;
-  font-family: 'Chivo', sans-serif;
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
   color: #9f0101;
   font-size: 20px;
   font-weight: bold;
