--- a/Winners Circuit/wc/src/pages/homepage.css
+++ b/Winners Circuit/wc/src/pages/homepage.css
@@ -1,53 +1,27 @@
 @import url('https://fontlibrary.org//face/glacial-indifference');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
 body {
-  background-color: #f6f6f6;
+  background-color: #b2afaf;
 }
 
-#logo {
-  height: 200px;
-  width: 200px;
-  float: left;
-  margin-left: 60px;
-  margin-bottom: 60px;
+.flex-container {
+  display: flex;
+  flex-direction: column;
 }
 
-.left {
-  margin-left: 60px;
-  float: left;
-  clear: both;
-}
-
-.left p {
-  font-family: 'GlacialIndifferenceRegular', sans-serif;
-  font-size: 95px;
-  margin-bottom: 70px;
-  margin-top: -50px;
-}
-
-.right {
-  float: right;
-}
-
-#win {
-  color: #9f0101;
-}
-
-.textBoxes h3 {
+#welcome {
   text-align: center;
-  margin-top: 40px;
-  margin-left: -25px;
-  padding: 15px;
-  border: 8px solid #9f0101;
+  margin-top: 3%;
+  margin-left: 14%;
   font-family: 'GlacialIndifferenceRegular', sans-serif;
-  font-weight: lighter;
-  font-size: 40px;
-  width: 800px;
+  font-size: 200%;
 }
 
-.bold {
-  font-family: 'GlacialIndifferenceRegular', sans-serif;
-  font-weight: bold;
+#buttons {
+  float: right;
+  margin-right: 2%;
+  margin-top: -1%;
 }
 
 #joinButton {
@@ -75,8 +49,124 @@ body {
   width: 100px;
 }
 
-#buttonBorder {
-  margin-top: -160px;
-  margin-right: 60px;
+#logo {
+  margin-left: 34%;
+  margin-right: 34%;
+  margin-top: -10%;
+  display: block;
+  height: 33%;
+  width: 33%;
+}
+
+.textBoxes {
+  clear: both;
+  width: 845px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -7%;
+}
+
+.textBoxes h3 {
+  background-color: white;
+  text-align: center;
+  padding: 15px;
+  border: 10px solid #9f0101;
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
+  font-weight: lighter;
+  font-size: 35px;
+  width: 800px;
+}
+
+.bold {
+  font-family: 'Glacial Indifference Regular', sans-serif;
+  font-weight: bold;
+}
+
+.sectionTwo {
+  height: 500px;
+  width: 100%;
+}
+
+.sectionTwoLeft {
+  height: 500px;
+  width: 50%;
+  margin-top: 5%;
+  float: left;
+}
+
+.sectionTwoLeft iframe {
+  height: 100%;
+  width: 100%;
+  margin-left: 2%;
+  border-radius: 35px;
+  border: black;
+}
+
+.sectionTwoRight {
+  height: 500px;
+  width: 48%;
+  padding-right: 2%;
+  float: right;
+}
+
+.sectionTwoRight p {
+  text-align: left;
+  color: white;
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
+  font-size: 150%;
+  padding-left: 10%;
+}
+
+#white {
+  font-family: 'GlacialIndifferenceBold', sans-serif;
+  color: white;
+  font-weight: bolder;
+  font-size: 500%;
+}
+
+#red {
+  font-size: 500%;
+  font-family: 'GlacialIndifferenceBold', sans-serif;
+  color: #9f0101;
+  margin-top: -10%;
+}
+
+.sectionThree {
+  background-color: #f6f6f6;
+  margin-top: 150px;
+}
+
+.sectionThreeLeft {
+  margin-left: 2%;
+  width: 50%;
+  text-align: left;
+  float: left;
+}
+
+.sectionThreeLeft h1 {
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
+  font-size: 90px;
+}
+
+.sectionThreeLeft li {
+  margin-left: -2%;
+  padding-top: 8%;
+  font-size: 35px;
+  font-family: "Bebas Neue";
+}
+
+.redHighlight {
+  color: #9f0101;
+}
+
+.sectionThreeRight {
+  width: 48%;
+  height: 100%;
+  float: right;
+}
+
+#tempPhoto {
+  width: 100%;
+  height: 875px;
 }
 
