--- a/Winners Circuit/wc/src/pages/homepage.css
+++ b/Winners Circuit/wc/src/pages/homepage.css
@@ -13,9 +13,27 @@ body {
 #welcome {
   text-align: center;
   margin-top: 3%;
-  margin-left: 14%;
+  margin-left: 7%;
   font-family: 'GlacialIndifferenceRegular', sans-serif;
   font-size: 200%;
+}
+
+#socialMedia {
+  float: left;
+  margin-top: -1%;
+}
+
+#twitter {
+  height: 50px;
+  width: 50px;
+  margin-left: -148%;
+  margin-right: 25%;
+}
+
+#instagram {
+  height: 50px;
+  width: 50px;
+  margin-left: 5%;
 }
 
 #buttons {
@@ -170,3 +188,92 @@ body {
   height: 875px;
 }
 
+.sectionFour {
+  background-color: #f6f6f6;
+  width: 100%;
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
+  font-size: 45px;
+}
+
+.sectionFour h1 {
+  margin-left: 2%;
+}
+
+.redPhoto {
+  height: 420px;
+  width: 460px;
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 4%;
+}
+
+.sectionFour h2 {
+  margin-top: 0%;
+  font-size: 70px;
+}
+
+#lowerImageTitle1 {
+  margin-left: 9%;
+}
+
+#lowerImageTitle2 {
+  margin-left: 41.5%;
+  margin-top: -7.5%
+}
+
+#lowerImageTitle3 {
+  margin-left: 74.5%;
+  margin-top: -8%;
+}
+
+#lowerImageText1 {
+  margin-left: 4%;
+  width: 25%;
+  font-size: 40px;
+}
+
+#lowerImageText2 {
+  font-size: 40px;
+  margin-left: 40%;
+  margin-top: -7.5%;
+  width: 23%;
+}
+
+#lowerImageText3 {
+  font-size: 40px;
+  margin-left: 73%;
+  margin-top: -7.5%;
+}
+
+.sectionFive {
+  background: linear-gradient(rgba(255,255,255,.8), rgba(255,255,255,.8)), url("background2.png");
+
+}
+
+.sectionFive h1 {
+  font-family: 'Bebas Neue';
+  font-size: 80px;
+  text-align: center;
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
+#signUpButton {
+  background-color: #9f0101;
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
+  color: white;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  border-radius: 35px;
+  border: solid 5px #111111;
+  padding: 5px;
+  width: 10%;
+  margin-left: 43%;
+}
+
+.sectionFive p {
+  font-family: 'GlacialIndifferenceRegular', sans-serif;
+  font-size: 60px;
+  margin-left: 37%;
+}
