--- a/Winners Circuit/wc/src/pages/homepage.css
+++ b/Winners Circuit/wc/src/pages/homepage.css
@@ -43,6 +43,7 @@ body {
 }
 
 #joinButton {
+  text-decoration: none;
   font-family: 'GlacialIndifferenceRegular', sans-serif;
   font-size: 20px;
   font-weight: bold;
@@ -55,6 +56,7 @@ body {
 }
 
 #signInButton {
+  text-decoration: none;
   background-color: white;
   font-family: 'GlacialIndifferenceRegular', sans-serif;
   color: #9f0101;
@@ -62,9 +64,14 @@ body {
   font-weight: bold;
   border-radius: 35px;
   border: solid 3px #9f0101;
-  padding: 10px;
+  padding: 12px;
   margin: 5px;
-  width: 100px;
+}
+
+#logoDiv {
+  margin-top: -7%;
+  margin-right: 10%;
+  margin-left: 10%;
 }
 
 #logo {
@@ -163,7 +170,7 @@ body {
 
 .sectionThreeLeft h1 {
   font-family: 'GlacialIndifferenceRegular', sans-serif;
-  font-size: 90px;
+  font-size: 80px;
 }
 
 .sectionThreeLeft li {
@@ -192,7 +199,7 @@ body {
   background-color: #f6f6f6;
   width: 100%;
   font-family: 'GlacialIndifferenceRegular', sans-serif;
-  font-size: 45px;
+  font-size: 40px;
 }
 
 .sectionFour h1 {
@@ -259,6 +266,7 @@ body {
 }
 
 #signUpButton {
+  text-decoration: none;
   background-color: #9f0101;
   font-family: 'GlacialIndifferenceRegular', sans-serif;
   color: white;
