--- a/Winners Circuit/wc/src/pages/Homepage/homepage.css
+++ b/Winners Circuit/wc/src/pages/Homepage/homepage.css
@@ -13,7 +13,7 @@ body {
 #welcome {
   text-align: center;
   margin-top: 3%;
-  margin-left: 8%;
+  margin-left: 7%;
   font-family: 'GlacialIndifferenceRegular', sans-serif;
   font-size: 200%;
 }
@@ -42,19 +42,6 @@ body {
   margin-top: -1%;
 }
 
-#joinButton {
-  text-decoration: none;
-  font-family: 'GlacialIndifferenceRegular', sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-  color: #111111;
-  background-color: #f6f6f6;
-  border-radius: 35px;
-  padding: 10px;
-  border: solid 3px black;
-  background-color: white;
-}
-
 #signInButton {
   text-decoration: none;
   background-color: white;
@@ -69,6 +56,7 @@ body {
 }
 
 #homepageLogoDiv {
+  position: relative;
   margin-right: 10%;
   margin-left: 10%;
   margin-bottom: 5%;
