--- a/Winners Circuit/wc/src/pages/LoginComponent/LoginComponent.css
+++ b/Winners Circuit/wc/src/pages/LoginComponent/LoginComponent.css
@@ -1,22 +1,15 @@
 @import url('https://fontlibrary.org//face/glacial-indifference');
 
-* {
-
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-    font-family: "GlacialIndifferenceBold", sans-serif;
-
-}
-
 .modal {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-main {
@@ -24,7 +17,6 @@
     top:50%;
     left:50%;
     transform: translate(-50%,-50%);
-
     background: #b2afaf;
     border: 7px solid #9f0101;
 
@@ -40,7 +32,7 @@
 }
 
 .display-block {
-    display: block;
+    display: inline-block;
 }
 
 .display-none {
@@ -60,6 +52,7 @@
 
 #closeButton {
 
+    z-index: 2;
     position: absolute;
     top: 15px;
     right: 25px;
