--- a/Winners Circuit/wc/src/index.css
+++ b/Winners Circuit/wc/src/index.css
@@ -13,3 +13,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.loading {
+  position: absolute;
+  background-color: transparent;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, 0) translateY(-50%);
+  width: 50px;
+}
